--- a/src/components/Cell.module.css
+++ b/src/components/Cell.module.css
@@ -19,3 +19,19 @@
     height: 80px;
     width: 80px;
 }
+
+.checkerBlack {
+    width: 80px;
+    height: 80px;
+    border-width: 2px;
+    border-radius: 80px;
+    background-color: black;
+}
+
+.checkerWhite {
+    width: 80px;
+    height: 80px;
+    border-width: 2px;
+    border-radius: 80px;
+    background-color: white;
+}
